# page-change-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: fetch.py  hash_text.py  load_json.py  main.py  save_json.py
app/cli/: main.py
app/core/: fetcher.py  logger.py  monitor.py  parser.py  storage.py
page_update_monitor/: __init__.py  config.py
page_update_monitor/cli/: main.py
page_update_monitor/core/: logger.py  monitor.py  utils.py
