[project]
name = "page-update-monitor"
version = "1.0.2"
description = "CLI tool to monitor web page updates"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.24,<1.0",
    "requests>=2.33,<3.0",
    "beautifulsoup4>=4.14,<5.0",
    "rich>=15.0,<16.0",
    "platformdirs>=4.0,<5.0"
]

[project.scripts]   
pum = "page_update_monitor.cli.main:app"

[tool.setuptools.packages.find]
include = ["page_update_monitor*"]